--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -56,10 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\Component.cs" />
+    <Compile Include="Entities\Components\Transform.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\GameState.cs" />
-    <Compile Include="System\InputObject.cs" />
+    <Compile Include="System\UserInputAction.cs" />
     <Compile Include="System\StateApplication.cs" />
     <Compile Include="System\StateManager.cs" />
     <Compile Include="System\TextureManager.cs" />
