--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\GameState.cs" />
