--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\EntityBehaviour.cs" />
     <Compile Include="Entities\Components\IComponent.cs" />
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\GameState.cs" />
+    <Compile Include="System\IInstanceTree.cs" />
     <Compile Include="System\UserInputAction.cs" />
     <Compile Include="System\StateApplication.cs" />
     <Compile Include="System\StateManager.cs" />
