--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Prefab.cs" />
     <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
