--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VorliasEngine2D</RootNamespace>
-    <AssemblyName>VorliasEngine2D</AssemblyName>
+    <AssemblyName>VE2D</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,6 +48,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -72,7 +74,11 @@
     <Compile Include="System\StateManager.cs" />
     <Compile Include="System\TextureManager.cs" />
     <Compile Include="System\UserInputService.cs" />
+    <Compile Include="System\Utility\Extensions.cs" />
     <Compile Include="System\Utility\VectorUtil.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
