--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -58,15 +58,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\PolygonCircleCollider.cs" />
+    <Compile Include="Entities\Components\IPolygonColliderComponent.cs" />
+    <Compile Include="Entities\Components\PolygonCollider.cs" />
+    <Compile Include="Entities\Components\PolygonRectCollider.cs" />
     <Compile Include="Entities\Components\EntityBehaviour.cs" />
+    <Compile Include="Entities\Components\ICollisionComponent.cs" />
     <Compile Include="Entities\Components\IComponent.cs" />
+    <Compile Include="Entities\Components\IRenderableComponent.cs" />
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Prefab.cs" />
     <Compile Include="Graphics\NineSliceTexture.cs" />
+    <Compile Include="Serialization\SerializedProperty.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Debugging\DebugExtension.cs" />
+    <Compile Include="System\Experimental\Experimental.cs" />
+    <Compile Include="System\Experimental\GameScene.cs" />
     <Compile Include="System\GameState.cs" />
     <Compile Include="System\IInstanceTree.cs" />
     <Compile Include="System\UserInputAction.cs" />
@@ -75,6 +85,8 @@
     <Compile Include="System\TextureManager.cs" />
     <Compile Include="System\UserInputService.cs" />
     <Compile Include="System\Utility\Extensions.cs" />
+    <Compile Include="System\Utility\Polygon.cs" />
+    <Compile Include="System\Utility\StringParser.cs" />
     <Compile Include="System\Utility\VectorUtil.cs" />
   </ItemGroup>
   <ItemGroup>
