--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\Internal\Component.cs" />
+    <Compile Include="Entities\Components\Internal\IContainerComponent.cs" />
     <Compile Include="Entities\Components\PolygonCircleCollider.cs" />
     <Compile Include="Entities\Components\Internal\IPolygonColliderComponent.cs" />
     <Compile Include="Entities\Components\PolygonCollider.cs" />
@@ -68,9 +70,11 @@
     <Compile Include="Entities\Components\Internal\IRenderableComponent.cs" />
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
+    <Compile Include="Entities\Components\UITransform.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Prefab.cs" />
     <Compile Include="Entities\SerializePropertyAttribute.cs" />
+    <Compile Include="Entities\UserInterface.cs" />
     <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="Serialization\PerfabSerializer.cs" />
     <Compile Include="Serialization\SerializedProperty.cs" />
@@ -81,6 +85,7 @@
     <Compile Include="System\Experimental\GameScene.cs" />
     <Compile Include="System\GameState.cs" />
     <Compile Include="System\IInstanceTree.cs" />
+    <Compile Include="System\UIDimensions.cs" />
     <Compile Include="System\UserInputAction.cs" />
     <Compile Include="System\StateApplication.cs" />
     <Compile Include="System\StateManager.cs" />
