--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -72,15 +72,14 @@
     <Compile Include="Entities\Components\Internal\IRenderableComponent.cs" />
     <Compile Include="Entities\Components\SpriteRenderer.cs" />
     <Compile Include="Entities\Components\Transform.cs" />
-    <Compile Include="Entities\Components\UIRenderer.cs" />
+    <Compile Include="Entities\Components\Internal\UIComponent.cs" />
     <Compile Include="Entities\Components\UITransform.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Prefab.cs" />
-    <Compile Include="Entities\SerializePropertyAttribute.cs" />
-    <Compile Include="Entities\UserInterface.cs" />
+    <Compile Include="Entities\Components\UserInterface.cs" />
     <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="Serialization\PerfabSerializer.cs" />
-    <Compile Include="Serialization\SerializedProperty.cs" />
+    <Compile Include="Serialization\PersistentPropertyAttribute.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
