Refactoring Assembly (again)

--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -8,6 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VorliasEngine2D</RootNamespace>
+    <AssemblyName>Vorlias2D</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
