UI element positioning based on parent
Added ability to position children based on UI element parents. :+1:

--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\UI\UICoordinateMode.cs" />
     <Compile Include="Entities\Components\World\Camera.cs" />
     <Compile Include="Entities\Components\UI\UIImageButton.cs" />
     <Compile Include="Entities\Components\Internal\Component.cs" />
