--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -89,11 +89,13 @@
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
+    <Compile Include="System\FontManager.cs" />
     <Compile Include="System\Internal\ExclusiveGameViewProperty.cs" />
     <Compile Include="System\Experimental\Experimental.cs" />
     <Compile Include="System\GameState.cs" />
     <Compile Include="System\GameView.cs" />
     <Compile Include="System\Internal\IInstanceTree.cs" />
+    <Compile Include="System\Internal\ResourceManager.cs" />
     <Compile Include="System\UIDimensions.cs" />
     <Compile Include="System\UserInputAction.cs" />
     <Compile Include="System\StateApplication.cs" />
