--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="System\Input\MouseCoordinates.cs" />
     <Compile Include="Entities\Components\UI\UICoordinateMode.cs" />
     <Compile Include="Entities\Components\UI\UIExtension.cs" />
     <Compile Include="Entities\Components\UI\UIText.cs" />
@@ -91,7 +92,7 @@
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
-    <Compile Include="System\FontManager.cs" />
+    <Compile Include="System\Resources\FontManager.cs" />
     <Compile Include="System\Input\InputState.cs" />
     <Compile Include="System\Input\InputType.cs" />
     <Compile Include="System\Input\UIActionType.cs" />
@@ -105,11 +106,12 @@
     <Compile Include="System\Input\KeyboardInputAction.cs" />
     <Compile Include="System\Input\MouseInputAction.cs" />
     <Compile Include="System\Input\MouseInputType.cs" />
+    <Compile Include="System\Resources\SoundManager.cs" />
     <Compile Include="System\UIDimensions.cs" />
     <Compile Include="System\Input\UserInputAction.cs" />
     <Compile Include="System\StateApplication.cs" />
     <Compile Include="System\GameManager.cs" />
-    <Compile Include="System\TextureManager.cs" />
+    <Compile Include="System\Resources\TextureManager.cs" />
     <Compile Include="System\Input\UserInputService.cs" />
     <Compile Include="System\Input\UserInterfaceAction.cs" />
     <Compile Include="System\Utility\Extensions.cs" />
