--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -92,6 +92,7 @@
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
+    <Compile Include="System\CustomMouseCursor.cs" />
     <Compile Include="System\Resources\FontManager.cs" />
     <Compile Include="System\Input\InputState.cs" />
     <Compile Include="System\Input\InputType.cs" />
