Removed IInstanceTree.GetChildren()

--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -58,7 +58,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ComponentNotFoundException.cs" />
     <Compile Include="Entities\Components\Internal\Debugging\IDebugDrawable.cs" />
+    <Compile Include="Entities\FindComponentResult.cs" />
+    <Compile Include="Entities\IDestroyable.cs" />
     <Compile Include="System\Input\MouseCoordinates.cs" />
     <Compile Include="Entities\Components\UI\UICoordinateMode.cs" />
     <Compile Include="Entities\Components\UI\UIExtension.cs" />
