--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Entities\Components\Internal\RenderOrder.cs" />
     <Compile Include="Entities\Components\Internal\SetEntityInvalidException.cs" />
     <Compile Include="Entities\Components\Internal\UpdatePriority.cs" />
+    <Compile Include="Entities\Components\PersistentPropertyAttribute.cs" />
     <Compile Include="Entities\Components\World\AnchorPoint.cs" />
     <Compile Include="Entities\Components\World\CameraType.cs" />
     <Compile Include="Entities\Components\World\PositionConstraint.cs" />
@@ -111,7 +112,7 @@
     <Compile Include="Entities\Components\UI\UserInterface.cs" />
     <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="Serialization\PerfabSerializer.cs" />
-    <Compile Include="Serialization\PersistentPropertyAttribute.cs" />
+    <Compile Include="Serialization\SerializablePropertyAttribute.cs" />
     <Compile Include="System\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
