Changes to colliders, added collision ignore list

--- a/VorliasEngine2D.csproj
+++ b/VorliasEngine2D.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\ComponentNotFoundException.cs" />
+    <Compile Include="Entities\Components\Colliders\CollisionComponent.cs" />
     <Compile Include="Entities\Components\Internal\ColliderDetection.cs" />
     <Compile Include="Entities\Components\Internal\Debugging\IDebugDrawable.cs" />
     <Compile Include="Entities\Components\Internal\InvalidComponentPairException.cs" />
