Updated project metadata

--- a/Vorlias2D.csproj
+++ b/Vorlias2D.csproj
@@ -63,7 +63,8 @@
     <Compile Include="Entities\Components\UI\UIImageCheckButton.cs" />
     <Compile Include="Entities\Components\UI\UITexture.cs" />
     <Compile Include="Entities\UIEntity.cs" />
-    <Compile Include="System\Experimental\LineShape.cs" />
+    <Compile Include="Events\ViewEvents.cs" />
+    <Compile Include="Graphics\LineShape.cs" />
     <Compile Include="System\GameViewSingleton.cs" />
     <Compile Include="System\Utility\KeypointTimeException.cs" />
     <Compile Include="System\Utility\NumberSequence.cs" />
