--- a/Vorlias2D.csproj
+++ b/Vorlias2D.csproj
@@ -69,12 +69,12 @@
     <Compile Include="System\DelayedAction.cs" />
     <Compile Include="System\GameViewSingleton.cs" />
     <Compile Include="System\MouseConstraintType.cs" />
-    <Compile Include="System\Sequences\ColorSequence.cs" />
-    <Compile Include="System\Sequences\ColorSequenceKeypoint.cs" />
-    <Compile Include="System\Sequences\ISequenceKeyframe.cs" />
-    <Compile Include="System\Sequences\KeypointTimeException.cs" />
-    <Compile Include="System\Sequences\NumberSequence.cs" />
-    <Compile Include="System\Sequences\NumberSequenceKeypoint.cs" />
+    <Compile Include="System\Types\Sequences\ColorSequence.cs" />
+    <Compile Include="System\Types\Sequences\ColorSequenceKeypoint.cs" />
+    <Compile Include="System\Types\Sequences\ISequenceKeyframe.cs" />
+    <Compile Include="System\Types\Sequences\KeypointTimeException.cs" />
+    <Compile Include="System\Types\Sequences\NumberSequence.cs" />
+    <Compile Include="System\Types\Sequences\NumberSequenceKeypoint.cs" />
     <Compile Include="Entities\Components\ParticleEmitter\Particle.cs" />
     <Compile Include="Entities\Components\ParticleEmitter\ParticleEmitter.cs" />
     <Compile Include="Entities\Components\Physics\BasicMovement.cs" />
@@ -169,10 +169,10 @@
     <Compile Include="System\Input\UserInterfaceAction.cs" />
     <Compile Include="System\Utility\Extensions.cs" />
     <Compile Include="System\Utility\MathUtil.cs" />
-    <Compile Include="System\Utility\NumberRange.cs" />
-    <Compile Include="System\Sequences\Sequence.cs" />
+    <Compile Include="System\Types\NumberRange.cs" />
+    <Compile Include="System\Types\Sequences\Sequence.cs" />
     <Compile Include="System\Utility\ThreadedService.cs" />
-    <Compile Include="System\Utility\Polygon.cs" />
+    <Compile Include="System\Types\Polygon.cs" />
     <Compile Include="System\Utility\StringTokenizer.cs" />
     <Compile Include="System\Utility\Vectors.cs" />
     <Compile Include="System\Utility\VectorUtil.cs" />
