--- a/Vorlias2D.csproj
+++ b/Vorlias2D.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Events\ViewEvents.cs" />
     <Compile Include="Graphics\LineShape.cs" />
     <Compile Include="System\DelayedAction.cs" />
-    <Compile Include="System\GameViewSingleton.cs" />
+    <Compile Include="System\StateApplication\GameViewSingleton.cs" />
     <Compile Include="System\MouseConstraintType.cs" />
     <Compile Include="System\Types\Sequences\ColorSequence.cs" />
     <Compile Include="System\Types\Sequences\ColorSequenceKeypoint.cs" />
@@ -100,8 +100,8 @@
     <Compile Include="Serialization\SerializedPropertyType.cs" />
     <Compile Include="System\EngineInfo.cs" />
     <Compile Include="System\GameCollectionService.cs" />
-    <Compile Include="System\GameViewInitException.cs" />
-    <Compile Include="System\GameViewPriority.cs" />
+    <Compile Include="System\StateApplication\GameViewInitException.cs" />
+    <Compile Include="System\StateApplication\GameViewPriority.cs" />
     <Compile Include="System\Input\InputBindingBehaviour.cs" />
     <Compile Include="System\Input\InputBindingPriority.cs" />
     <Compile Include="System\Input\KeyCombination.cs" />
@@ -136,7 +136,7 @@
     <Compile Include="Graphics\NineSliceTexture.cs" />
     <Compile Include="Serialization\PerfabSerializer.cs" />
     <Compile Include="Serialization\SerializablePropertyAttribute.cs" />
-    <Compile Include="System\Application.cs" />
+    <Compile Include="System\Application\Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Debugging\DebugExtension.cs" />
     <Compile Include="System\CustomMouseCursor.cs" />
@@ -147,9 +147,8 @@
     <Compile Include="System\Input\InputType.cs" />
     <Compile Include="System\Input\UIActionType.cs" />
     <Compile Include="System\Internal\ExclusiveGameViewProperty.cs" />
-    <Compile Include="System\Experimental\Experimental.cs" />
-    <Compile Include="System\GameState.cs" />
-    <Compile Include="System\GameView.cs" />
+    <Compile Include="System\StateApplication\GameState.cs" />
+    <Compile Include="System\StateApplication\GameView.cs" />
     <Compile Include="System\Internal\IEntityContainer.cs" />
     <Compile Include="System\Internal\ResourceManager.cs" />
     <Compile Include="System\Input\JoystickInputAction.cs" />
@@ -158,12 +157,12 @@
     <Compile Include="System\Input\MouseInputType.cs" />
     <Compile Include="System\Resources\InvalidTextureIdException.cs" />
     <Compile Include="System\Resources\SoundManager.cs" />
-    <Compile Include="System\StateManager.cs" />
-    <Compile Include="System\UIAxis.cs" />
-    <Compile Include="System\UICoordinates.cs" />
+    <Compile Include="System\StateApplication\Managers\StateManager.cs" />
+    <Compile Include="System\Types\UIAxis.cs" />
+    <Compile Include="System\Types\UICoordinates.cs" />
     <Compile Include="System\Input\UserInputAction.cs" />
-    <Compile Include="System\StateApplication.cs" />
-    <Compile Include="System\GameManager.cs" />
+    <Compile Include="System\StateApplication\StateApplication.cs" />
+    <Compile Include="System\StateApplication\Managers\GameManager.cs" />
     <Compile Include="System\Resources\TextureManager.cs" />
     <Compile Include="System\Input\UserInputService.cs" />
     <Compile Include="System\Input\UserInterfaceAction.cs" />
@@ -176,9 +175,9 @@
     <Compile Include="System\Utility\StringTokenizer.cs" />
     <Compile Include="System\Utility\Vectors.cs" />
     <Compile Include="System\Utility\VectorUtil.cs" />
-    <Compile Include="System\ViewManager.cs" />
-    <Compile Include="System\WeightedRandom.cs" />
-    <Compile Include="System\WeightedRandomType.cs" />
+    <Compile Include="System\StateApplication\Managers\ViewManager.cs" />
+    <Compile Include="System\Types\WeightedRandom.cs" />
+    <Compile Include="System\Types\WeightedRandomType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\Components\UI\Enums\" />
