Submitting all file changes

--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Events\ViewEvents.cs" />
     <Compile Include="Graphics\LineShape.cs" />
     <Compile Include="System\DelayedAction.cs" />
+    <Compile Include="System\Input\ITextInput.cs" />
+    <Compile Include="System\Input\UserInputManager.InputBinding.cs" />
+    <Compile Include="System\Input\UserInputManager.InputBindingAction.cs" />
     <Compile Include="System\StateApplication\GameViewSingleton.cs" />
     <Compile Include="System\MouseConstraintType.cs" />
     <Compile Include="System\Types\Sequences\ColorSequence.cs" />
