Updated GameView & GameState
GameView now implements interface IGameView, this allows different types of views to be added.

--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -80,6 +80,7 @@
     <Compile Include="System\StateApplication\GameViewSingleton.cs" />
     <Compile Include="System\MouseConstraintType.cs" />
     <Compile Include="System\StateApplication\IGameState.cs" />
+    <Compile Include="System\StateApplication\IGameView.cs" />
     <Compile Include="System\StateApplication\InterfaceView.cs" />
     <Compile Include="System\StateApplication\InterfaceViewSingleton.cs" />
     <Compile Include="System\StateApplication\LightGameState.cs" />
