Added project changes

--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -75,6 +75,7 @@
     <Compile Include="System\Input\UserInputManager.InputBinding.cs" />
     <Compile Include="System\Input\UserInputManager.InputBindingAction.cs" />
     <Compile Include="System\Linq\EntityCollectionLinq.cs" />
+    <Compile Include="System\StateApplication\BasicGameView.cs" />
     <Compile Include="System\StateApplication\GameState.cs" />
     <Compile Include="System\StateApplication\GameViewConfig.cs" />
     <Compile Include="System\StateApplication\GameViewSingleton.cs" />
@@ -163,7 +164,7 @@
     <Compile Include="System\Input\UIActionType.cs" />
     <Compile Include="System\Internal\ExclusiveGameViewProperty.cs" />
     <Compile Include="System\StateApplication\PersistentGameState.cs" />
-    <Compile Include="System\StateApplication\GameView.cs" />
+    <Compile Include="System\StateApplication\EntityGameView.cs" />
     <Compile Include="System\Internal\IEntityContainer.cs" />
     <Compile Include="System\Internal\ResourceManager.cs" />
     <Compile Include="System\Input\JoystickInputAction.cs" />
